src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0005 - Canada</fullName>
                </value>
                <value>
                    <fullName>0072 - Employee Sales</fullName>
                </value>
                <value>
                    <fullName>0074 - Promotions</fullName>
                </value>
                <value>
                    <fullName>0076 - Licensed Sales</fullName>
                </value>
                <value>
                    <fullName>0100 - Strategic</fullName>
                </value>
                <value>
                    <fullName>0101 - Regional</fullName>
                </value>
                <value>
                    <fullName>0102 - Internal</fullName>
                </value>
                <value>
                    <fullName>0103 - International</fullName>
                </value>
                <value>
                    <fullName>0104 - Industrial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To #</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <label>Sold To #</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Geography__c</fullName>
        <inlineHelpText>Select one or more states where this distributor does business</inlineHelpText>
        <label>Target Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Markets__c</fullName>
        <inlineHelpText>Select one or more markets this distributor is targeting</inlineHelpText>
        <label>Target Market(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Electrical Contractor</fullName>
                </value>
                <value>
                    <fullName>General Industry</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Petrochemical</fullName>
                </value>
                <value>
                    <fullName>Utility Contract</fullName>
                </value>
                <value>
                    <fullName>Utility Co-op</fullName>
                </value>
                <value>
                    <fullName>Utility Investor Owned</fullName>
                </value>
                <value>
                    <fullName>Utility Municipality</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Sales_Reps__c</fullName>
        <inlineHelpText>Number of sales reps, if any</inlineHelpText>
        <label># of Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Prospect_Type__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Approved Converted,Declined,L5 - Approved/Converted,D - Disqualified</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>smith</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Industrial_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Industrial_Leads</value>
        </filters>
        <label>All Industrial Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Distributor_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating_Indicator__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Industrial_Distributor_Prospect</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Approved Converted,Declined,L5 - Approved/Converted,D - Disqualified</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:360</value>
        </filters>
        <label>All Open Distributor Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>Management_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_End_User_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.End_User_Prospect</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Approved Converted,Declined,D - Disqualified</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:360</value>
        </filters>
        <label>All Open End User Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>InsideSales</group>
            <group>Management_Ops</group>
            <group>TechnicalSales286991</group>
            <role>Industrial_Sales_Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Retailer_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Retailer_Prospect</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Approved Converted,Declined,L5 - Approved/Converted,D - Disqualified</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:360</value>
        </filters>
        <label>All Open Retailer Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>Management_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Distributor_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Industrial_Distributor_Prospect</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Approved Converted,Declined,L5 - Approved/Converted,D - Disqualified</value>
        </filters>
        <label>My Open Distributor Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_End_User_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.End_User_Prospect</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Approved Converted,Declined,L5 - Approved/Converted,D - Disqualified</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:360</value>
        </filters>
        <label>My Open End User Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>InsideSales</group>
            <group>Management_Ops</group>
            <group>TechnicalSales286991</group>
            <role>Industrial_Sales_Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Retailer_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Retailer_Prospect</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Approved Converted,Declined,L5 - Approved/Converted,D - Disqualified</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:360</value>
        </filters>
        <label>My Open Retailer Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>End_User_Prospect</fullName>
        <active>true</active>
        <businessProcess>End User Prospect</businessProcess>
        <description>Select to enter a new end user prospect</description>
        <label>End User Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Industrial_Distributor_Prospect</fullName>
        <active>true</active>
        <businessProcess>Retailer%2FDistributor Qualification</businessProcess>
        <description>Select to enter a new industrial distributor prospect</description>
        <label>Industrial Distributor Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Industrial_Leads</fullName>
        <active>true</active>
        <businessProcess>Retailer%2FDistributor Qualification</businessProcess>
        <label>Industrial Leads</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retailer_Prospect</fullName>
        <active>true</active>
        <businessProcess>Retailer%2FDistributor Qualification</businessProcess>
        <description>Select to enter a new retailer or other prospect</description>
        <label>Retailer/Other Prospect</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Lead_Creation_Rule</fullName>
        <active>true</active>
        <description>This rule prompts a user if they do not enter either an email address or a phone number during a lead creation.</description>
        <errorConditionFormula>ISBLANK ( Email )  &amp;&amp; ISBLANK ( Phone )</errorConditionFormula>
        <errorMessage>You must enter either a Phone Number or an Email Address to create/save a lead.</errorMessage>
    </validationRules>
</CustomObject>